apps/voxora-app/dev/deployment.yaml
# apps/voxora-app/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxora
  labels:
    app: voxora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voxora
  template:
    metadata:
      labels:
        app: voxora
    spec:
      volumes:
        - name: voxora-data
          persistentVolumeClaim:
            claimName: voxora-data-pvc
      securityContext:
        fsGroup: 1001  # Ensure nextjs user can write to mounted volume
      containers:
        - name: voxora
          image: secdevopsjourney/voxora-app:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: voxora-data
              mountPath: /data
