apps/voxora-app/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voxora-service
spec:
  selector:
    app: voxora
  ports:
    - protocol: TCP
      port: 80    # Expose service on port 80
      targetPort: 3000 # Direct traffic to container port 3000
  type: ClusterIP
